--- a/jstask3/index.html
+++ b/jstask3/index.html
@@ -2,30 +2,38 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
-		<link rel="stylesheet" href="css/css.css" />
-		<title>登录页</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/css.css" />					
+		<link rel="stylesheet" href="js/edittext/summernote.css"/>	
+		<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">	
+		<title>主页</title>
 	</head>
-	<body>
-		<div id="loginbox">
-			<div class="title" id="title">后台登录</div>
-			<div class="content">
-				<div class="inputbox">
-					<i class="iconfont">&#xe801;</i>
-					<input type="input" placeholder="请输入用户名" id="user"/>
-				</div>
-				<div class="inputbox">
-					<i class="iconfont">&#xe603;</i>
-					<input type="input" placeholder="请输入密码" id="password"/>
-				</div>
-				<p id="tishi"></p>
-				<div class="btnbox">
-					<input type="submit" value="登 录" id="login"/>
-				</div>				
-			</div>
-		</div>
-		<!--<script type="text/javascript" src="js/js.js" ></script>-->
-		<script type="text/javascript" src="js/jquery-1.8.3.min.js" ></script>
-		<script type="text/javascript" src="js/jquery.js" ></script>
+	<body ng-app='xyapp'>
+		<div ui-view></div>
+		<script src="https://cdn.bootcss.com/angular.js/1.6.9/angular.js"></script>
+		<!--路由-->
+		<script src="https://cdn.bootcss.com/angular-ui-router/1.0.9/angular-ui-router.js"></script>
+		<!--日历-->
+		<script src="https://cdn.bootcss.com/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.js"></script>	
+		<!--日历汉化包-->
+		<script src="https://cdn.bootcss.com/angular.js/1.6.9/i18n/angular-locale_zh-cn.js"></script>
+		<!--对话框-->
+		<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
+		<script src="https://cdn.bootcss.com/bootbox.js/4.4.0/bootbox.js"></script>
+		<!--图片上传-->
+		<script src="https://cdn.bootcss.com/angular-file-upload/2.5.0/angular-file-upload.js"></script>
+		<!--富文本-->
+		<script src="js/edittext/summernote.js"></script>
+		<script src="js/edittext/summernote-zh-CN.js"></script>
+		
+		<script type="text/javascript" src="js/app.js" ></script>		
+		<script type="text/javascript" src="js/data.js" ></script>
+		<script type="text/javascript" src="js/filter.js" ></script>
+		<script type="text/javascript" src="js/directive.js" ></script>	
+		<script type="text/javascript" src="js/task6/backindex.js" ></script>
+		<script type="text/javascript" src="js/task6/login.js" ></script>
+		<script type="text/javascript" src="js/task6/article.js" ></script>	
+		<script type="text/javascript" src="js/task6/articleadd.js" ></script>	
 	</body>
 </html>
