--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 		<title>所有任务</title>
 		<style>
 			input{width: 90vw;height: 3em;background: #FBB435;border: none;text-align: center;display: block;color: #fff;border-radius: 5px;margin: 5vw auto;font-size: 1.2em;outline: none;}
+			a{text-decoration: none;}
 		</style>
 	</head>
 	<body>
-		<input type="button" value="九宫格" onclick="window.location.href='jstask1/task1.html'"/>
-		<input type="button" value="杀人游戏" onclick="window.location.href='jstask2/qidong.html'"/>	
-		<input type="button" value="登录" onclick="window.location.href='http://localhost:8080/'"/>	
+		<a href="http://47.93.204.155/jstask1_ninegrid/index.html"><input type="button" value="九宫格"/></a>
+		<a href="http://47.93.204.155/jstask2_killgame/qidong.html"><input type="button" value="杀人游戏"/></a>
+		<a href="http://47.93.204.155/jstask6_backstage/index.html"><input type="button" value="登录"/></a>	
 	</body>
 </html>
