--- a/jstask6_backstage/html/login.html
+++ b/jstask6_backstage/html/login.html
@@ -1,4 +1,4 @@
-<div ng-controller='loginCtrl' style="background: url(../img/bg.jpg) no-repeat center;height:100vh;">
+<div ng-controller='loginCtrl' style="background: url(./img/bg.jpg) no-repeat center;height:100vh;">
 	<div class="loginbox">
 		<div class="title">后台登录</div>
 		<form name="loginform" class="content">
