--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 	<body>
 		<a href="http://47.93.204.155/jstask1_ninegrid/index.html"><input type="button" value="九宫格"/></a>
 		<a href="http://47.93.204.155/jstask2_killgame/qidong.html"><input type="button" value="杀人游戏"/></a>
-		<a href="http://47.93.204.155/jstask6_backstage/index.html"><input type="button" value="登录"/></a>	
+		<a href="http://47.93.204.155/jstask6_backstage/index.html"><input type="button" value="网页版后台"/></a>	
 	</body>
 </html>
