--- a/jstask3/html/login.html
+++ b/jstask3/html/login.html
@@ -10,7 +10,7 @@
 				<i class="iconfont">&#xe603;</i>
 				<input class="mytext" name="pass" type="password" placeholder="请输入密码" ng-model='pass'/>
 			</div>
-			<p class="tishi">{{tishi}}</h1></p>
+			<p class="tishi">{{tishi}}</p>
 			<div class="btnbox">
 				<a class="mybtn" ng-click='loginbtn()' style="color: #fff;">登 录</a>
 			</div>
